package ui.coordinator;

public interface ILoginCoordinator {
    void start();
    void goToLogin();
    void goToRegister();
    void goToMainMenu();
    void goBackToWelcome();
}
