@startuml

title __COORDINATOR's Class Diagram__\n

  package  {
    package ui.coordinator {
      abstract class BaseCoordinator {
          ~ setViewController()
      }
    }
  }
  

  package  {
    package ui.coordinator {
      interface ILoginCoordinator {
          {abstract} + start()
          {abstract} + goToLogin()
          {abstract} + goToRegister()
          {abstract} + goToMainMenu()
          {abstract} + goBackToWelcome()
      }
    }
  }
  

  package  {
    package ui.coordinator {
      interface IMainMenuCoordinator {
          {abstract} + start()
          {abstract} + logout()
          {abstract} + goToFlightSearch()
          {abstract} + goBackToFlightSearch()
          {abstract} + goToFlightSearchResults()
          {abstract} + goToHotelSearchResults()
          {abstract} + goToBookingConfirmScreen()
      }
    }
  }
  

  package  {
    package ui.coordinator {
      class LoginCoordinator {
          + start()
          + goToLogin()
          + goToRegister()
          + goToMainMenu()
          + goBackToWelcome()
      }
    }
  }
  

  package  {
    package ui.coordinator {
      class MainMenuCoordinator {
          + start()
          + logout()
          + goToFlightSearch()
          + goBackToFlightSearch()
          + goToFlightSearchResults()
          + goToHotelSearchResults()
          + goToBookingConfirmScreen()
      }
    }
  }
  

  BaseCoordinator o-- ViewController : currentViewController
  LoginCoordinator -up-|> ILoginCoordinator
  LoginCoordinator -up-|> BaseCoordinator
  LoginCoordinator o-- CareTaker : careTaker
  MainMenuCoordinator -up-|> IMainMenuCoordinator
  MainMenuCoordinator -up-|> BaseCoordinator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
